test/Fail/IrrelevantConstructor.err
IrrelevantConstructor.agda:4,4-9: error: [GenericError]
Irrelevant constructors are not supported
when checking the constructor c in the declaration of D
